@@ -2,6 +2,9 @@ v0.9.0
 - Added support for domains in noproxy - #2
 - Expanded noproxy to work in all proxy modes - #177
 - Added --test to verify Px configuration
+- Windows binary now created with embeddable Python to avoid being flagged
+  by virus scanners - #182 #197
+- Added support for Python 3.11 and 3.12
 
 v0.8.4 - 2023-02-06
 - Support for specifying PAC file encoding - #167
